# bluefin-v2-client-python

./: .gitignore  CHANGES.md  CODEOWNERS  LICENSE  README.md  contracts.json  pyproject.toml  requirements.in  rfq-contracts.json
.github/: pull_request_template.md
.github/workflows/: publish_to_pypy.yml
docs/: README.perps.md  README.rfq.md  openapi-client.yaml  openapi-rfq-client.yml  openapi-rfq-trades.yml
examples/: 1.initialization.py  10.1.socket_readonly.py  10.sockets.py  11.sub_accounts.py  12.open_order_event.py  13.orderbook_updates.py  14.web_sockets.py  15.get_funding_history.py  16.1.listening_events_using_sub_account.py  16.add_remove_subaccount.py  16.listening_events_using_sub_account.py  17.1.get_orders_readonly.py  17.get_orders.py  18.dms_api.py  19.Generate_readonly_token.py  2.user_info.py  20.contract_call.py  3.balance.py  4.1.placing_stop_orders.py  4.placing_orders.py  5.adjusting_leverage.py  5.cancelling_orders.py  6.adjusting_margin.py  7.cancelling_orders.py  7.onboarding_signer.py  8.exchange_data.py  9.user_data.py  SocketClient.py  SocketServer.py  config.py  contract_call.py
src/: check.py
src/bluefin_client_sui/: __init__.py  account.py  api_service.py  client.py  constants.py  contract_abis.py  contracts.py  enumerations.py  interfaces.py  onboarding_signer.py  order_signer.py  rpc.py  signer.py  socket_manager.py  sockets_lib.py  utilities.py  websocket_client.py
src/bluefin_rfq_client/: __init__.py  contracts.py  quote.py  rfq.py
src/bluefin_v2_client/: __init__.py  account.py  api_service.py  client.py  constants.py  contracts.py  enumerations.py  interfaces.py  onboarding_signer.py  order_signer.py  rpc.py  signer.py  sockets_lib.py  utilities.py  websocket_client.py
src/sui_utils/: __init__.py  account.py  bcs.py  coin_utils.py  enumerations.py  rpc.py  signer.py  sui_interfaces.py  utilities.py
tests/: place_order_test.py  precision_test.py  rfq_test.py
