[project]
name = "bluefin_v2_client"
version = "2.0.0"
description = "Library to interact with Bluefin exchange protocol including its off-chain api-gateway and on-chain contracts"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["bluefin", "exchange", "decentralized", "perpetuals", "blockchain"]
dependencies = [
  'requests ~= 2.28.1',
  'python-socketio ~= 5.7.2',
  'websocket-client ~= 1.5.1'
]

[project.urls]
"Homepage" = "https://github.com/fireflyprotocol/bluefin-v2-client-python"
"Bug Reports" = "https://github.com/fireflyprotocol/bluefin-v2-client-python/issues"
"Source" = "https://github.com/fireflyprotocol/bluefin-v2-client-python"

[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"
