[project]
name = "bluefin_v2_client"
version = "2.5.1"
description = "Library to interact with Bluefin exchange protocol including its off-chain api-gateway and on-chain contracts"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["bluefin", "exchange", "decentralized", "perpetuals", "blockchain"]
dependencies = [
  'requests ~= 2.31.0',
  'aiohttp ~= 3.8.5',
  'aiosignal ~= 1.3.1',
  'asn1crypto ~= 1.5.1',
  'async-timeout ~= 4.0.3',
  'attrs ~= 23.1.0',
  'bidict ~= 0.22.1',
  'bip-utils ~= 2.7.1',
  'cbor2 ~= 5.4.6',
  'cffi ~= 1.15.1',
  'charset-normalizer ~= 3.2.0',
  'coincurve ~= 17.0.0',
  'crcmod ~= 1.7',
  'ecdsa ~= 0.18.0',
  'ed25519-blake2b ~= 1.4',
  'frozenlist ~= 1.4.0',
  'gevent ~= 23.7.0',
  'greenlet ~= 2.0.2',
  'idna ~= 3.4',
  'multidict ~= 6.0.4',
  'netifaces ~= 0.10.6',
  'py-sr25519-bindings ~= 0.2.0',
  'pycparser ~= 2.21',
  'pycryptodome ~= 3.18.0',
  'PyNaCl ~= 1.5.0',
  'python-engineio ~= 4.6.0',
  'python-socketio ~= 5.8.0',
  'six ~= 1.16.0',
  'socketio ~= 0.2.1',
  'websocket ~= 0.2.1',
  'websocket-client ~= 1.6.2',
  'yarl ~= 1.9.2',
  'zope.event ~= 5.0',
  'zope.interface ~= 6.0'
]

[project.urls]
"Homepage" = "https://github.com/fireflyprotocol/bluefin-v2-client-python"
"Bug Reports" = "https://github.com/fireflyprotocol/bluefin-v2-client-python/issues"
"Source" = "https://github.com/fireflyprotocol/bluefin-v2-client-python"

[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"
